@@ -30,6 +30,8 @@ DIST binutils-2.19.51.0.5-patches-1.1.tar.bz2 7233 RMD160 ba1b910611a8c50ed90d3f
 DIST binutils-2.19.51.0.5.tar.bz2 15743724 RMD160 0ddf1406a6d2a3608c3d0607e86326f09ce9c1cc SHA1 d9f24f4cbab6da163aa98c9ff095574f8820fe07 SHA256 37a49744cceea5be64aebbe7b4cb3d7cfeef879ee00212c1de4e7b3e116f4154
 DIST binutils-2.19.51.0.6-patches-1.0.tar.bz2 7234 RMD160 bad1b3ccd8f0fa77894d5149eee2ba973c3eb0df SHA1 d1fd9b4bb4fb1731adbd4a4ad7ddbd26e9488f90 SHA256 6eff1f4b42584a8d7d6df12b937f9c5ec2087a507b30441caa5247c96ad1c16b
 DIST binutils-2.19.51.0.6.tar.bz2 15801649 RMD160 110700578968188979175163fa31f88358141063 SHA1 8efb5fd37419e208c44d25f461c2dcda289ae2b7 SHA256 0ed794528175298f609cf4392c5761e9bcbf3e5600b4bc967d5a6390e844b318
+DIST binutils-2.19.51.0.7-patches-1.0.tar.bz2 7242 RMD160 3339612c29c890dbf8c0e25f18d733a20daba7c0 SHA1 68f4f17788d4cae0e252916aad5cdf694103bc83 SHA256 2aa13713f11b7dc768f53c402c8260d97cb1e456ba0e2dff855d4c8a6c2b3dd1
+DIST binutils-2.19.51.0.7.tar.bz2 15797920 RMD160 73af9b141d0c8bfefb0fca34c0bd83eb30eb598e SHA1 1263f936badd68a70ebeab9b4a8fb4a9423db742 SHA256 683c89de15f7ffd93914d709483ba4c13b3a2099a1bece896d68e9330e37a841
 DIST binutils-2.19.tar.bz2 16219400 RMD160 1d5e234e22dbd9cd126ccfd685bf5700dc36ad1a SHA1 a150b97ec47996bf8f01d6bc14d41587faa4bbff SHA256 bd2ea10ffc2bf62a917b05f4fbe3d02212589c2bc177fa0c51a9c874d3da528a
 EBUILD binutils-2.16.1-r3.ebuild 649 RMD160 6faf1c397af3f4aaae2cdbf6463db3dfe85db7ef SHA1 90fce5a08b73f8c6b1bc333c996e37ec4df98e40 SHA256 91b8df52e274fc75a642fe98984b8379e51e540abdbd629b4c181837968d8633
 EBUILD binutils-2.17.50.0.17.ebuild 724 RMD160 31935504ee101cd0cc00aac5c7289a0f11af7e12 SHA1 838a2d74dd0d29c3fdc645abcc38ef3233dbe36e SHA256 3f18eb55472f77e4a77c3444479d339ba9a111c3456c2c748ef13262fc27b216
@@ -39,6 +41,7 @@ EBUILD binutils-2.19.1-r01.1.ebuild 858 RMD160 a502ead0677e59dd876114fba1a0de6ac
 EBUILD binutils-2.19.50.0.1.ebuild 837 RMD160 274429b59b470ece980096cf369e8d7d07d007a4 SHA1 1eb0f4d48643c0a2a9de0bc729e0e1bfde9574c2 SHA256 efccdba062647ee6eece4ba5df93f88936bd3a1ce803bf8e3ed416023818212d
 EBUILD binutils-2.19.51.0.5.ebuild 864 RMD160 9b0cb283a1657363696e7e323784b587a5492b21 SHA1 b2c6171817628fcce827106ac4623a71b35ffabb SHA256 2c5383b8b4720bcfb683fe6318c7a5b38b23e459c279e9af8a88256ff2a7e845
 EBUILD binutils-2.19.51.0.6.ebuild 638 RMD160 bf17ff0fe30209d3e07441696e21f3245234a089 SHA1 59bfb0257f91eb6efe88831cffdb2112573c8449 SHA256 a653333a2344d2dec0d789784ce0d1c979a06777e69b4ba2dd1607d73eaec641
+EBUILD binutils-2.19.51.0.7.ebuild 638 RMD160 13199b20aa47d0cc292a056846492b0e42d7d3a8 SHA1 8222154734a0fea1a3534e94bde6b4c97991da46 SHA256 8c08815213748dc84bc486ed39d4e3c12ba67b5a5d70ee081bf766ece43b24f4
 EBUILD binutils-2.19.ebuild 845 RMD160 f0b9cf67c3c7db333fa32681233b5a1c93098a3d SHA1 58dced1634469817b23cc07723778fea75091ab4 SHA256 55f1f8a8d852fc6ae3efb5c1783a694b6bd6eb116cc967621a396ef1ed9edc25
-MISC ChangeLog 62435 RMD160 666845cb6318f58db83224628a6f22df96e54fda SHA1 6133aa59de45e5c2858c0f4f5b71507744b77fae SHA256 5835423236a0b3ae12d82bb8bbeaac4ab68814d241d5ac32aabc929df2411733
+MISC ChangeLog 62571 RMD160 5a3feb257fa7506fc0d294c2d0d9fcd4a82bd809 SHA1 440da71c5a66acce74301941693ab38b811622b4 SHA256 6479f0694ff46b154135c10293c7b52f531b47b195c2bde414e0ab275dc8e4e5
 MISC metadata.xml 511 RMD160 84535ecd31e21020a41f3d173a294f03c5951da0 SHA1 1a40f6d427a9e3b64a15967b9b442d8cd65d40bb SHA256 ceac2610b009f7a25946ad186496cb7d761a495820ed6b67be9b560dda223c39
