@@ -1,6 +1,12 @@
 # ChangeLog for sys-devel/binutils
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/binutils/ChangeLog,v 1.358 2009/05/30 02:02:20 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/binutils/ChangeLog,v 1.359 2009/06/01 20:13:11 vapier Exp $
+
+*binutils-2.19.51.0.7 (01 Jun 2009)
+
+  01 Jun 2009; Mike Frysinger <vapier@gentoo.org>
+  +binutils-2.19.51.0.7.ebuild:
+  Version bump.
 
 *binutils-2.19.51.0.6 (30 May 2009)
 
